# deft

./: .gitmodules  CMakeLists.txt  distributedRun.sh  memcached.conf
include/: Common.h  Config.h  dsm_client.h
script/: all_clear_hugepage.py  all_hugepage.py  killall.py  restartMemc.sh  run_bench.py  ssh_connect.py
src/: Tree.cpp  dsm_client.cpp
